test-deployment/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kic
  name: test-kic-frontend-service
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: test-kic-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kic
  name: test-kic-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-kic-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: kic
      labels:
        app: test-kic-frontend
    spec:
      containers:
        - image: gcr.io/keeping-it-casual/kic-frontend:dev
          imagePullPolicy: Always
          name: test-kic-frontend
          ports:
            - containerPort: 80
