test-deployment/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: kic
  name: test-kic-frontend-virtual-service
spec:
  hosts:
    - "test.keeping-it-casual.com"
  gateways:
    - kic-gateway
  http:
      - route:
        - destination:
            host: test-kic-frontend-service
            port:
              number: 80
